--- a/15-puzzle.html
+++ b/15-puzzle.html
@@ -8,6 +8,8 @@
 	
 </head>
 <body>
+	<input id="button" type="button" value="Начать игру"/><br/>
+	
 	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="15-puzzle.js" type="text/javascript"></script>	
 </body>
